--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -105,3 +105,16 @@ $custom-colors: (
     background-color: $value;
   }
 }
+
+.w-20 {
+  width: 20px;
+}
+
+.w-1000 {
+  width: 1000px;
+}
+
+.w-0 {
+  width: 0 !important;
+  overflow: visible;
+}
